add some html and css content

--- a/single.html
+++ b/single.html
@@ -1,2 +1,23 @@
-<h1>This is single.html file</h1>
-<p>work width merge and rebase</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>project</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <!-- <li>JJ Shop</li> -->
+        <li>Home</li>
+        <li>About</li>
+        <li>Content</li>
+        <li>Help</li>
+        <li>Feedback</li>
+      </ul>
+    </nav>
+  </header>
+</body>
+</html>
